// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageFeature > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageFeature > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative flex items-start gap-2.5 rounded-xl">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
    <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with default slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`PageFeature > renders with description correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <div data-slot="description" class="text-[15px] text-pretty text-muted">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with description slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
    <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Description slot</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageFeature > renders with leading slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5">Leading slot</div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
    <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
    <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative rounded-sm">
  <div data-slot="leading" class="inline-flex items-center justify-center mb-2.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
    <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with title correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageFeature > renders with title slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty font-semibold text-highlighted">Title slot</div>
    <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
  </div>
</div>"
`;

exports[`PageFeature > renders with to correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5 has-focus-visible:ring-2 has-focus-visible:ring-primary transition">
  <!--v-if-->
  <div data-slot="wrapper" class=""><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Feature link" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageFeature > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative rounded-sm flex items-start gap-2.5">
  <div data-slot="leading" class="inline-flex items-center justify-center p-0.5"><span class="iconify i-lucide:house size-5 shrink-0 text-primary" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="text-base text-pretty text-highlighted font-bold">Title</div>
    <div data-slot="description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
  </div>
</div>"
`;
